--- a/public/home/index.html
+++ b/public/home/index.html
@@ -8,7 +8,7 @@
   <title>Spotify Radio - SemanaJSExpert 6.0</title>
   <link rel="stylesheet" href="./home/css/reset.css" />
   <link rel="stylesheet" href="./home/css/styles.css" />
-  <link rel="shortcut icon" type="image/png" href="./home/assets/spotify-favicon.png" />
+  <link rel="shortcut icon" type="image/ico" href="../favicon.ico" />
   <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
     integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc"
     crossorigin="anonymous"></script>
