--- a/public/home/index.html
+++ b/public/home/index.html
@@ -147,8 +147,7 @@
     </div>
 
     <div class="audio-player">
-      <audio id="audio" preload="none" controls autoplay src="./../../audio/songs/conversation.mp3"></audio>
-
+      <audio id="audio" preload="none" controls autoplay src="../../audio/songs/conversation.mp3"></audio>
       <div class="player-controls">
         <div class="player__actions">
           <button id="previousAudio" class="hide"></button>
